--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 98)
 
 set(SOURCE_FILES main.cpp
                 Server.cpp
-                Server.h)
+                Server.h FIleReader.h FileReader.cpp)
 add_executable(TCPserver ${SOURCE_FILES})
